Replace URI.create / Paths.get to satisfy JabGuiArchitectureTests
ArchUnit rules in jabgui forbid URI.create(String) and Paths.get(...);
replace both with the project's preferred forms:

- jablib/.../FulltextFetchers.java: switch the file:// magic-byte
  check from Paths.get(URI.create(url)) to Path.of(new URI(url)) and
  add URISyntaxException to the catch.
- jablib/.../BrowserExtensionFulltextFetcher.java: build the loopback
  endpoint with the seven-arg URI(scheme, userInfo, host, port, path,
  query, fragment) constructor instead of URI.create. Surfacing
  URISyntaxException is fine here; the same Optional.empty() soft-miss
  path that handles unreachable providers covers it.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>